# starscript-v1

./: .gitignore  Cargo.toml  README.md
src/: gamemath.rs  main.rs  old.main.rs  shared.rs  shipmanager.rs  wayfinding.rs
src/traderoutes/: mod.rs  routes.rs  steps.rs
