[package]
name = "starscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
itertools = "0.10.3"
serde_json = "1.0.60"
# reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
spacetraders = { path = "../spacetraders-rs" }