[package]
name = "starscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
strum_macros = "0.23.1"
itertools = "0.10.3"
serde_json = "1.0.60"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
spacetraders = { path = "../spacetraders-rs" }